--- a/index.html
+++ b/index.html
@@ -5,21 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Sign In</title>
 
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta
       name="google-signin-client_id"
       content="19841981619-hejotmcejfjfhd7cq87cm1cm755u6jps.apps.googleusercontent.com"
-    />
+    /> -->
   </head>
   <body>
     <h1>Google Sign In App</h1>
 
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    <br />
-    <a href="#" onclick="signOut();">Sign out</a>
-    <hr />
-    <button id="function-jorge">function-1</button>
+    <button onclick="signInIntellisys()">Sign in Intellisys</button>
+    <br> <br>
+    <button onclick="signOut()">Sign out</button>
 
-    <script src="sign-in-test.js"></script>
+    <!-- <script defer src="/__/firebase/6.2.0/firebase-app.js"></script>
+    <script defer src="/__/firebase/6.2.0/firebase-auth.js"></script>
+    <script defer src="/__/firebase/init.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
+    <script >
+       var config = {
+          apiKey: "AIzaSyBhYbD24dZTFiVWxD74CLP6lpK-5Olw9pA",
+          authDomain: "metricas-239920.firebaseapp.com"
+        };
+        firebase.initializeApp(config);
+
+      function signInIntellisys() {
+        var provider = new firebase.auth.GoogleAuthProvider();
+        firebase
+          .auth()
+          .signInWithPopup(provider)
+          .then(function(result) {
+            var token = result.credential.accessToken;
+            var user = result.user;
+            console.log(token, user);
+          })
+          .catch(function(error) {
+            var errorCode = error.code;
+            var errorMessage = error.message;
+            var email = error.email;
+            var credential = error.credential;
+          });
+      }
+
+      function signOut() {
+        firebase
+          .auth()
+          .signOut()
+          .then(function() {
+            console.log("User sign out!");
+          })
+          .catch(function(error) {
+            console.log("Error signing user out!");
+          });
+      }
+    </script>
+
+    <!-- <script src="sign-in-test.js"></script> -->
   </body>
 </html>
