Add project creds

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <body>
     <h1>Google Sign In App</h1>
 
+    <p>Organizational sign in. Intellisys employees only 🛑</p>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <br />
-    <a href="#" onclick="signOut();">Sign out</a>
-    <hr />
-    <button id="function-jorge">function-1</button>
+    <button href="#" onclick="signOut();">Sign out</button>
+    <br />
+    <br />
+    <button id="function-1">function-1</button>
 
     <script src="sign-in-test.js"></script>
   </body>
