--- a/index.html
+++ b/index.html
@@ -4,62 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Google Sign In</title>
-
-    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta
-      name="google-signin-client_id"
-      content="19841981619-hejotmcejfjfhd7cq87cm1cm755u6jps.apps.googleusercontent.com"
-    /> -->
   </head>
   <body>
     <h1>Google Sign In App</h1>
 
-    <button onclick="signInIntellisys()">Sign in Intellisys</button>
-    <br> <br>
-    <button onclick="signOut()">Sign out</button>
+    <button onclick="signInIntellisys()" id="signin-btn">Sign in Intellisys</button>
+    <br />
+    <br />
+    <button onclick="signOut()" id="signout-btn">Sign out</button>
+    <div id="container"></div>
 
-    <!-- <script defer src="/__/firebase/6.2.0/firebase-app.js"></script>
-    <script defer src="/__/firebase/6.2.0/firebase-auth.js"></script>
-    <script defer src="/__/firebase/init.js"></script> -->
-    <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
-    <script >
-       var config = {
-          apiKey: "AIzaSyBhYbD24dZTFiVWxD74CLP6lpK-5Olw9pA",
-          authDomain: "metricas-239920.firebaseapp.com"
-        };
-        firebase.initializeApp(config);
+    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-auth.js"></script>
 
-      function signInIntellisys() {
-        var provider = new firebase.auth.GoogleAuthProvider();
-        firebase
-          .auth()
-          .signInWithPopup(provider)
-          .then(function(result) {
-            var token = result.credential.accessToken;
-            var user = result.user;
-            console.log(token, user);
-          })
-          .catch(function(error) {
-            var errorCode = error.code;
-            var errorMessage = error.message;
-            var email = error.email;
-            var credential = error.credential;
-          });
-      }
-
-      function signOut() {
-        firebase
-          .auth()
-          .signOut()
-          .then(function() {
-            console.log("User sign out!");
-          })
-          .catch(function(error) {
-            console.log("Error signing user out!");
-          });
-      }
-    </script>
-
-    <!-- <script src="sign-in-test.js"></script> -->
+    <script src="auth.js"></script>
+    <script src="functions-script.js"></script>
   </body>
 </html>
